update @bolt/icon to 0.9.8

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/icon/15-icon-name-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/icon/15-icon-name-variation.twig
@@ -6,7 +6,7 @@
     {% include "@bolt-components-icon/icon.twig" with {
       name: name,
       background: "circle",
-      size: "xlarge",
+      size: "large",
     }%}
     <br />{{ name }}
   </li>
