--- a/packages/components/bolt-video/src/_video.scss
+++ b/packages/components/bolt-video/src/_video.scss
@@ -1,7 +1,9 @@
-@import '@bolt/settings-all';
-@import '@bolt/tools-all';
+@import '@bolt/core';
 
+@import 'videojs-enhancements';
 
+// Same as max-width of wrapper container
+$bolt-video-wrapper--max-width: bolt-breakpoint(xxlarge);
 
 .c-bolt-video {
   position: absolute;
@@ -13,19 +15,20 @@
   transition: transform .4s cubic-bezier(.645, 0, .355, 1);
 }
 
-.c-bolt-video__video-wrapper {
+.c-bolt-video__wrapper {
   position: relative;
-  pointer-events: all;
-  border-radius: 12px;
-  box-shadow: 0 55px 70px -20px rgba(50, 50, 93, .55), 0 20px 30px -10px rgba(0, 0, 0, .14);
-  transform: translateY(0) !important;
-  transition: transform .4s cubic-bezier(.645, 0, .355, 1);
+  width: 100%;
+  pointer-events: none;
+  max-width: $bolt-video-wrapper--max-width;
+  margin: 0 auto;
+  transition: opacity 0.4s ease, visibility 0.1s ease;
+  opacity: 0;
+  visibility: hidden;
 
-  .is-collapsed & {
-    cursor: pointer;
-    @include respond-to(medium) {
-      transform: scale(.45) rotateX(3deg) rotateY(-15deg) rotate(-1deg) translateX(500px) translateY(300px)!important;
-    }
+  .is-expanded & {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
   }
 }
 
@@ -60,6 +63,10 @@
   transition: all 0.3s ease;
   opacity: 0; // Initial state before brightcove video player kicks in
 
+  @include respond-to(small) {
+    right: (bolt-spacing(large) / -2) - bolt-spacing(xsmall);
+  }
+
   .is-collapsed & {
     opacity: 0;
     pointer-events: none;
@@ -73,58 +80,50 @@
   &:hover {
     opacity: 1;
   }
+
+  &:active {
+    opacity: 0.6;
+  }
+}
+
+.c-bolt-video__close-button--icon-to-text {
+  @media (max-width: (bolt-breakpoint(small) - 1px)) {
+    display: block;
+    position: relative;
+    right: 0;
+    text-align: right;
+
+    .c-bolt-video__close-button-icon {
+      display: none;
+    }
+  }
+
+  @media (min-width: bolt-breakpoint(small)) {
+    position: absolute;
+
+    .c-bolt-video__close-button-text {
+      @include bolt-visuallyhidden;
+    }
+  }
+}
+
+.c-bolt-video__close-button:not(.c-bolt-video__close-button--icon-to-text) {
+  .c-bolt-video__close-button-text {
+    @include bolt-visuallyhidden;
+  }
+}
+
+.c-bolt-video__close-button-icon,
+.c-bolt-video__close-button-text {
+  cursor: pointer;
+}
+
+.c-bolt-video__close-button-text {
+  color: bolt-color(white);
+  text-decoration: underline;
 }
 
 .c-bolt-video__close-wrapper {
   position: relative;
   width: 100%;
-}
-
-
-
-// Vertically and horizontally center the default Brightcove share overlay content
-.vjs-modal-dialog .vjs-modal-dialog-content {
-  height: auto;
-  max-width: 1024px;
-  margin: 0 auto;
-  position: relative; // override position: absolute
-}
-
-.video-js {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.video-js .vjs-modal-dialog {
-  overflow: auto; // so psuedo layer below shows up
-  box-sizing: border-box;
-  z-index: 100;
-  max-width: 768px;
-  margin: 0 auto;
-  overflow: visible; // override default overflow: hidden
-  background: transparent; // override default gradient so the psuedo layer is the only backgrond showing up
-  position: relative; // override position: absolute
-  height: auto; // override height: 100%;
-
-  &:before {
-    content: '';
-    display: block;
-    background-color: rgba(bolt-color(black), 0.8);
-    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.8), rgba(255, 255, 255, 0));
-    width: auto;
-    height: auto;
-    position: absolute;
-    top: -9999px;
-    left: -9999px;
-    bottom: -9990px;
-    right: -9990px;
-    opacity: 1;
-    pointer-events: none;
-  }
-}
-
-.vjs-social-overlay .vjs-social-description,
-.vjs-social-overlay .vjs-social-title {
-  white-space: normal;
 }
