--- a/packages/components/bolt-video/src/video.twig
+++ b/packages/components/bolt-video/src/video.twig
@@ -21,48 +21,14 @@
 
 {% set videoTag %}
   {% include "@bolt/_video-tag.twig" %}
-  {% embed "@bolt/wrapper.twig" with {
-    attributes: {
-      class: [
-        "u-bolt-padding-left-none",
-        "u-bolt-padding-right-none"
-      ]
-    }
-  } %}
-    {% block wrapper_content %}
-      <div class="c-bolt-video__close-wrapper">
-        <div class="c-bolt-video__close-button">
-          {% include "@bolt/button.twig" with {
-            text: "Close video",
-            tag: "button",
-            size: "xxsmall",
-            style: "secondary",
-            iconOnly: true,
-            rounded: true,
-            icon: {
-              name: "close",
-              size: "small"
-            },
-            attributes: {
-              "on-click": "close",
-              "on-click-target": videoUuid
-            }
-          } only %}
-        </div>
-      </div>
-    {% endblock %}
-  {% endembed %}
 {% endset %}
 
 {% if ratio == true %}
-  {% embed "@bolt/ratio.twig" with {
+  {% include "@bolt/ratio.twig" with {
     aspectRatioHeight: aspectRatioHeight ?? 9,
-    aspectRatioWidth: aspectRatioWidth ?? 16
-  } %}
-    {% block ratio_content %}
-      {{ videoTag }}
-    {% endblock %}
-  {% endembed %}
+    aspectRatioWidth: aspectRatioWidth ?? 16,
+    children: videoTag
+  } only %}
 {% else %}
   {{ videoTag }}
 {% endif %}
