--- a/packages/components/brightcove-player/src/brightcove-player.twig
+++ b/packages/components/brightcove-player/src/brightcove-player.twig
@@ -1,11 +1,25 @@
 {% set attributes = create_attribute(attributes | default({})) %}
 
+{# force HTML5 Only Rendering #}
+{% set attributes = attributes.setAttribute("data-setup", '{"techOrder": ["Html5"]}') %}
+{% set showMeta = showMeta is null ? true : showMeta %}
+{% set showMetaTitle = showMeta is null ? false : showMetaTitle %}
+
+
 {% if videoId %}
   {% set attributes = attributes.setAttribute("video-id", videoId) %}
 {% endif %}
 
 {% if accountId %}
   {% set attributes = attributes.setAttribute("account-id", accountId) %}
+{% endif %}
+
+{% if showMeta %}
+  {% set attributes = attributes.setAttribute("show-meta", showMeta) %}
+{% endif %}
+
+{% if showMetaTitle %}
+  {% set attributes = attributes.setAttribute("show-meta-title", showMetaTitle) %}
 {% endif %}
 
 {% if playerId %}
