--- a/apps/pattern-lab--workshop/src/_patterns/02-components/breadcrumbs/05-breadcrumb.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/breadcrumbs/05-breadcrumb.twig
@@ -1,14 +1,14 @@
-{% include "@bolt/breadcrumb.twig" with {
+{% include "@bolt-components-breadcrumb/breadcrumb.twig" with {
   "contentItems": [
-    include("@bolt/link.twig", {
+    include("@bolt-components-link/link.twig", {
       "text": "Home",
       "url": "#"
     }),
-    include("@bolt/link.twig", {
+    include("@bolt-components-link/link.twig", {
       "text": "Landing Page",
       "url": "#"
     }),
-    include("@bolt/link.twig", {
+    include("@bolt-components-link/link.twig", {
       "text": "Sub Page",
       "url": "#"
     }),
