fix: Update fieldset legend font size to match search filters (BK-205)

--- a/src/_patterns/02-components/bolt-form/src/elements/form-fieldset.twig
+++ b/src/_patterns/02-components/bolt-form/src/elements/form-fieldset.twig
@@ -20,7 +20,8 @@ Available variables:
   <legend{{ legendAttributes.addClass('c-bolt-legend') }}>
     {% include "@bolt/headline.twig" with {
       "text": legendTitle,
-      "attributes": legendInnerAttributes
+      "attributes": legendInnerAttributes,
+      "size": "small"
     } only %}
   </legend>
   <div class="c-bolt-input-list">
