--- a/apps/pattern-lab--workshop/src/_includes/utils/docs.twig
+++ b/apps/pattern-lab--workshop/src/_includes/utils/docs.twig
@@ -1,22 +1,82 @@
-<div class="c-bolt-docs">
+<div class="c-bolt-docs t-bolt-xlight">
 
   <div class="c-bolt-docs__page-content">
 
-    <h1 class="c-bolt-docs__title">Nav Bar</h1>
+    {% include "@bolt/headline.twig" with {
+      size: "xxxlarge",
+      tag: "h1",
+      text: schema.title
+    } %}
+
+     {% include "@bolt/subheadline.twig" with {
+        weight: "regular",
+        size: "xxlarge",
+        tag: "p",
+        text: schema.description,
+        attributes: {
+          class: [
+            "u-bolt-margin-bottom-medium"
+          ]
+        }
+      } %}
 
     {% if readme %}
+      {% include "@bolt/headline.twig" with {
+        size: "xlarge",
+        tag: "h2",
+        url: "#getting-started",
+        text: "Getting Started",
+        icon: {
+          name: false
+        },
+        attributes: {
+          class: [
+            "u-bolt-margin-top-large",
+            "c-bolt-docs__heading-fragment"
+          ],
+          id: "getting-started"
+        }
+      } %}
       <div class="c-bolt-docs__lead">
         {{ readme|markdown }}
       </div>
     {% endif %}
 
     {% if code %}
-      <h4>Usage</h4>
+      {% include "@bolt/headline.twig" with {
+        size: "xlarge",
+        tag: "h2",
+        url: "#usage",
+        text: "Usage",
+        icon: false,
+        attributes: {
+          class: [
+            "u-bolt-margin-top-large",
+            "c-bolt-docs__heading-fragment"
+          ],
+          id: "usage"
+        }
+      } %}
       <pre><code>{{ code }}</code></pre>
     {% endif %}
 
 
     {% if schema %}
+      {% include "@bolt/headline.twig" with {
+        size: "xlarge",
+        tag: "h2",
+        url: "#schema",
+        text: "Schema",
+        icon: null,
+        attributes: {
+          class: [
+            "u-bolt-margin-top-large",
+            "c-bolt-docs__heading-fragment"
+          ],
+          id: "schema"
+        }
+      } %}
+
       <div class="bolt-docs__schema">
         {% include '@utils/schema-docs.twig' with { schema: schema } only %}
       </div>
@@ -30,14 +90,54 @@
     {% endif %}
   </div>
 
-  <div class="c-bolt-docs__page-nav">
-    {% if readmePath %}
-      {# @todo Improve robustness of getting ReadMe Path #}
-      {% set branchName = 'epic/refactor' %}
-      <a href="https://github.com/bolt-design-system/bolt/blob/{{ branchName }}/{{ readmePath }}" class="c-bolt-docs__page-nav__link" target="_blank">
-        <bolt-icon name="pencil"></bolt-icon>
-      Edit this page
-      </a>
-    {% endif %}
+  <div class="c-bolt-docs__page-nav u-bolt-padding-right-medium@small">
+    <ul class="o-bolt-ui-list o-bolt-ui-list--xsmall">
+      <li class="o-bolt-ui-list__item">
+        <ul class="o-bolt-ui-list o-bolt-ui-list--xxsmall o-bolt-ui-list--borderless">
+          {% if readme %}
+            <li class="o-bolt-ui-list__item">
+              {% include "@bolt/headline.twig" with {
+                size: "xsmall",
+                transform: "capitalize",
+                weight: "regular",
+                tag: "h3",
+                url: "#getting-started",
+                text: "Getting Started",
+                icon: {
+                  name: false
+                }
+              } %}
+            </li>
+          {% endif %}
+
+          {% if code %}
+            <li class="o-bolt-ui-list__item">
+              {% include "@bolt/headline.twig" with {
+                size: "xsmall",
+                transform: "capitalize",
+                weight: "regular",
+                tag: "h3",
+                url: "#usage",
+                text: "Usage",
+                icon: {
+                  name: false
+                }
+              } %}
+            </li>
+          {% endif %}
+        </ul>
+      </li>
+
+      {% if readmePath %}
+        <li class="o-bolt-ui-list__item">
+          {# @todo Improve robustness of getting ReadMe Path #}
+          {% set branchName = 'epic/refactor' %}
+          <a href="https://github.com/bolt-design-system/bolt/blob/{{ branchName }}/{{ readmePath }}" class="c-bolt-docs__page-nav__link" target="_blank">
+            <bolt-icon name="pencil"></bolt-icon>
+          Edit this page
+          </a>
+        </li>
+      {% endif %}
+    </ul>
   </div>
 </div>
