fix: fixing JS rendering by adding missing bolt/core utils added in v0.x; adding temp workaround to images not loading + example pegaworld dummy page.

--- a/packages/components/bolt-image/src/image.twig
+++ b/packages/components/bolt-image/src/image.twig
@@ -114,12 +114,12 @@
 
 {% if lazyload %}
   {% set imageAttributes = imageAttributes
-    .setAttribute("data-srcset", srcset)
+    .setAttribute("data-srcset", src)
     .setAttribute("srcset", placeholderDummySrc)
     .setAttribute("data-sizes", sizes)
   %}
 {% else %}
-  {% set imageAttributes = imageAttributes.setAttribute("srcset", srcset) %}
+  {% set imageAttributes = imageAttributes.setAttribute("srcset", src) %}
 {% endif %}
 
 {% set placeholderAttributes = create_attribute(placeholderAttributes | default({})).addClass("c-bolt-image__placeholder") %}
