--- a/apps/pattern-lab--workshop/src/styles/pl.scss
+++ b/apps/pattern-lab--workshop/src/styles/pl.scss
@@ -2,6 +2,7 @@
 @import "@bolt/core";
 @import "../_patterns/01-visual-styles/color-palette/_color-swatch";
 @import "*.scss";
+@import '../_patterns/04-page-examples/50-pega-world/**/*.scss';
 
 bolt-demo {
   display: block;
