--- a/apps/pattern-lab--workshop/src/_patterns/02-components/blockquote/00-blockquote-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/blockquote/00-blockquote-docs.twig
@@ -1,5 +1,4 @@
 {% set schema = get_data('@bolt-components-blockquote/blockquote.schema.yml') %}
-{% set readme = source('@bolt-components-blockquote/README.md') %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-blockquote/blockquote.twig" with {
     "content": "&lt;p&gt;The greater danger for most of us lies not in ... achieving our mark.&lt;/p&gt;",
@@ -10,6 +9,5 @@
 {% include '@utils/docs.twig' with {
   schema: schema,
   code: code,
-  readme: readme,
-  readmePath: 'packages/components/bolt-blockquote/README.md',
+  readmeFile: '@bolt-components-blockquote/README.md',
 } only %}
