--- a/apps/pattern-lab--workshop/src/_patterns/02-components/action-blocks/00-action-blocks-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/action-blocks/00-action-blocks-docs.twig
@@ -1,5 +1,4 @@
 {% set schema = get_data('@bolt-components-action-blocks/action-blocks.schema.yml') %}
-{% set readme = source('@bolt-components-action-blocks/README.md') %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-action-blocks/action-blocks.twig" with {
   contentItems: [
@@ -38,6 +37,5 @@
 {% include '@utils/docs.twig' with {
   schema: schema,
   code: code,
-  readme: readme,
-  readmePath: 'packages/components/bolt-action-blocks/README.md',
+  readmeFile: '@bolt-components-action-blocks/README.md',
 } only %}
