--- a/apps/pattern-lab--workshop/src/_patterns/02-components/breadcrumbs/00-breadcrumb-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/breadcrumbs/00-breadcrumb-docs.twig
@@ -24,6 +24,5 @@
 {% include '@utils/docs.twig' with {
   schema: schema,
   code: code,
-  readme: readme,
-  readmePath: 'packages/components/bolt-breadcrumb/README.md',
+  readmeFile: '@bolt-components-breadcrumb/README.md',
 } only %}
