update breadcrumb, device viewer, headline, icon, mage, link, logo

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/device-viewer/00-device-viewer-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/device-viewer/00-device-viewer-docs.twig
@@ -1,5 +1,4 @@
 {% set schema = get_data('@bolt-components-device-viewer/device-viewer.schema.yml') %}
-{% set readme = source('@bolt-components-device-viewer/README.md') %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-device-viewer/device-viewer.twig" with {
   device: "iphone8",
@@ -15,6 +14,5 @@
 {% include '@utils/docs.twig' with {
   schema: schema,
   code: code,
-  readme: readme,
-  readmePath: 'packages/components/bolt-device-viewer/README.md',
+  readmeFile: '@bolt-components-device-viewer/README.md',
 } only %}
