--- a/apps/pattern-lab--workshop/src/_patterns/02-components/image/00-image-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/image/00-image-docs.twig
@@ -1,5 +1,4 @@
 {% set schema = get_data('@bolt-components-image/image.schema.yml') %}
-{% set readme = source('@bolt-components-image/README.md') %}
 {% set code %} {% verbatim %}
 {% include '@bolt-components-image/image.twig' with {
   src: "/src/images/turtle.jpg",
@@ -9,8 +8,7 @@
 {% endset %}
 
 {% include '@utils/docs.twig' with {
-schema: schema,
-code: code,
-readme: readme,
-readmePath: 'packages/components/bolt-image/README.md',
+  schema: schema,
+  code: code,
+  readmeFile: '@bolt-components-image/README.md',
 } only %}
