--- a/apps/pattern-lab--workshop/src/_patterns/02-components/page-header/00-page-header-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/page-header/00-page-header-docs.twig
@@ -1,5 +1,3 @@
-{% set readme = source('@bolt-components-page-header/README.md') %}
-
 {% set code %} {% verbatim %}
 {% include "@bolt-components-page-header/page-header.twig" with {
   "content": content,
@@ -9,7 +7,6 @@
 
 {% include '@utils/docs.twig' with {
   code: code,
-  readme: readme,
-  readmePath: 'packages/components/bolt-page-header/README.md',
+  readmeFile: '@bolt-components-page-header/README.md',
 } only %}
 
