--- a/apps/pattern-lab--workshop/src/_patterns/02-components/teaser/00-teaser-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/teaser/00-teaser-docs.twig
@@ -1,5 +1,4 @@
 {#{% set schema = get_data('@bolt-components-teaser/teaser.schema.yml') %}#}
-{% set readme = source('@bolt-components-teaser/README.md') %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-teaser/teaser.twig" with {
   content: "Body text. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
@@ -22,6 +21,5 @@
 {% include '@utils/docs.twig' with {
   schema: schema,
   code: code,
-  readme: readme,
-  readmePath: 'packages/components/bolt-teaser/README.md',
+  readmeFile: '@bolt-components-teaser/README.md',
 } only %}
